@@ -8,6 +8,7 @@ from plone.app.testing import PLONE_FIXTURE
 from plone.app.testing import PloneSandboxLayer
 from plone.testing import z2
 from zope.configuration import xmlconfig
+import ftw.tagging.tests.builders
 
 
 class TaggingLayer(PloneSandboxLayer):
